Change bio and essays sections to divs
They have no headings so produce a warning in the W3C HTML validator.

--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -3,18 +3,18 @@ title = 'About'
 layout = 'single'
 menu = "main"
 +++
-<section id="bio" class="mb-2 text-gray-700">
+<div id="bio" class="mb-2 text-gray-700">
     <p>John Taylor was born in Darvel, Ayrshire, Scotland in 1936. He gained a Diploma of Art in Drawing and Painting at Glasgow School of Art in 1959 and Higher Diploma of Art at Birmingham Polytechnic 1972-73 where he studied screenprinting.</p>
-</section>
+</div>
 
-<section id="essays" class="print:hidden mb-2 text-gray-700">
+<div id="essays" class="print:hidden mb-2 text-gray-700">
     <p class="text-gray-700">Some essays on the artist's work by well-known writers:</p>
     <ul class="pl-6 py-2">
         <li><a class="font-medium hover:underline hover:text-gray-900" href="/essays/view-from-the-bunker/">The View from the Bunker</a>, by Cordelia Oliver</li>
         <li><a class="font-medium hover:underline hover:text-gray-900" href="/essays/new-work-1991/">New Work, 1991</a>, by James Kelman</li>
         <li><a class="font-medium hover:underline hover:text-gray-900" href="/essays/on-a-thin-crust-1996">On a Thin Crust, 1996</a>, by Donny O'Rourke</li>
     </ul>
-</section>
+</div>
 
 <div class="flex flex-col flex-between md:flex-row">
     <section class="text-gray-700 md:w-1/3">
